k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jarvis
  labels:
    name: jarvis
    version: v1.4.0
    managed-by: kubernetes
